--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "./src",
     "strict": true,
     "noImplicitAny": true,
+    "skipLibCheck": true,
     "declaration": true,
     "noEmit": true,
     "esModuleInterop": true,
